--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Albuquerque Ipsum</title>
     <link rel="stylesheet" href="blue.css">
 </head>
 <body>
     <h1>Albuquerque Ipsum</h1>
+    <a href="about.html">What is this thing I'm looking at?</a>
     <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
     <p>About how many words do you need?</p>
     <input id="numOfWords" type="number">
