added submit button, general stylizing

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h1>Albuquerque Ipsum</h1>
     <a href="about.html">What is this thing I'm looking at?</a>
     <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
-    <p>About how many words do you need?</p>
+    <span>About how many words do you need?</span>
     <input id="numOfWords" type="number">
+    <button id="submit">Generate</button>
     <p id="heresYerTxt">Here's yer text</p>
     <div id="outputTxt"></div>
 
