--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
     <span>About how many words do you need?</span>
     <input id="numOfWords" type="number">
-    <button id="submit">Generate</button>
+    <button id="submit" onclick="albuquerqize()">Generate</button>
     <p id="heresYerTxt">Here's yer text</p>
     <div id="outputTxt"></div>
 
