--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albuquerque Ipsum</title>
     <link rel="stylesheet" href="blue.css">
+    <link rel="icon" href="1.png">
 </head>
 <body>
     <h1>Albuquerque Ipsum</h1>
