--- a/about.html
+++ b/about.html
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albuquerque Ipsum</title>
     <link rel="stylesheet" href="blue.css">
+    <link rel="icon" href="1.png">
 </head>
 <body>
     <h1>Albuquerque Ipsum</h1>
 
-    Lorem Ipsum text is filler text for sites that don't have any actual written contet yet.  It's generated so that people can see how something might visually look once there is text there.  Traditionally, this is done in pseudo-Latin, thus, "Lorem Ipsum".  Many people have tried to make more interesting versions of this, my favorite being <a href="https://slipsum.com/?source=post_page-----fa9edd3e456a--------------------------------" target="_blank">this one</a> (give it a few seconds to load), but they all crucially lack Weird Al lyrics.  So that's what I'm up to here.  
-    <br>
+    <p>
+        Lorem Ipsum text is filler text for sites that don't have any actual written contet yet.  It's generated so that people can see how something might visually look once there is text there.  Traditionally, this is done in pseudo-Latin, thus, "Lorem Ipsum".  
+    </p>
+    <p>
+        Many people have tried to make more interesting versions of this, my favorite being <a href="https://slipsum.com/?source=post_page-----fa9edd3e456a--------------------------------" target="_blank">this one</a> (give it a few seconds to load), but they all crucially lack Weird Al lyrics.  So that's what I'm up to here.  
+    </p>
+    <p>
+        I wanted entire lines of text from "Albuquerque", so when you put in how many words you want, you may get a few more than you asked for, just to complete the line.  
+    </p>
+    <p>
+        Credit for lyrics is, of course, to the legendary <a href="https://www.weirdal.com/" target="_blank">"Weird Al" Yankovic.  </a> 
+    </p>
     <a class="margin" href="index.html">back</a>
 
     <script src="script.js"></script>
