added an h5 tagline

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Albuquerque Ipsum</h1>
+    <h5>Your source for completely unhinged filler text</h5>
     <a href="about.html">What is this thing I'm looking at?</a>
     <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
     <span>About how many words do you need?</span>
