new site color to compliment new 'running with scissors' img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="1.png">
 </head>
 <body>
+    <img src="Running_with_Scissors_(Weird_Al_Yankovic_album_-_cover_art).jpg" alt="">
     <h1>Albuquerque Ipsum</h1>
     <h5>Your source for completely unhinged filler text</h5>
     <a href="about.html">What is this thing I'm looking at?</a>
