--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h5>Your source for completely unhinged filler text</h5>
     <a href="about.html">What is this thing I'm looking at?</a>
     <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
-    <span>About how many words do you need?</span>
+    <span title="I'd go with between 100 and 5,000,000 - but you live your life.">About how many words do you need?*</span>
     <input id="numOfWords" type="number" value="500">
     <button id="submit" onclick="albuquerqize()">Generate</button>
     <p id="heresYerTxt">Here's yer text</p>
