--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@
     </p>
     <a class="margin" href="index.html">back</a>
 
+    <div id="sig">-RPB</div>
+
     <script src="script.js"></script>
 </body>
 </html>
