link to portfolio

--- a/about.html
+++ b/about.html
@@ -22,7 +22,13 @@
     <p>
         Credit for lyrics is, of course, to the legendary <a href="https://www.weirdal.com/" target="_blank">"Weird Al" Yankovic.  </a> 
     </p>
-    <a class="margin" href="index.html">back</a>
+
+    <a href="https://ryanpburnett.github.io/" 
+        target="_blank" 
+        class="margin">contact
+    </a>
+    <br>
+    <a href="index.html" class="margin">back</a>
 
     <div id="sig">-RPB</div>
 
