fixed broken contact link

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         Credit for lyrics is, of course, to the legendary <a href="https://www.weirdal.com/" target="_blank">"Weird Al" Yankovic.  </a> 
     </p>
 
-    <a href="https://ryanpburnett.github.io/" 
+    <a href="https://ryanpburnett.github.io/contact.html" 
         target="_blank" 
         class="margin">contact
     </a>
