--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <h1>Albuquerque Ipsum</h1>
 
     <p>
-        Lorem Ipsum text is filler text for sites that don't have any actual written contet yet.  It's generated so that people can see how something might look like once there is text there.  Traditionally, this is done in pseudo-Latin, thus, "Lorem Ipsum".  <a href="https://en.wikipedia.org/wiki/Lorem_ipsum">Here</a> is a link for more info, if you want.  
+        Lorem Ipsum text is filler text for sites that don't have any actual written contet yet.  It's generated so that people can see how something might look like once there is text there.  Traditionally, this is done in pseudo-Latin, thus, "Lorem Ipsum".  <a href="https://en.wikipedia.org/wiki/Lorem_ipsum" target="_blank">Here</a> is a link for more info, if you want.  
     </p>
     <p>
         Many people have tried to make more interesting versions of this, my favorite being <a href="https://slipsum.com/?source=post_page-----fa9edd3e456a--------------------------------" target="_blank">this one</a> (give it a few seconds to load), but they all crucially lack Weird Al lyrics.  So that's what I'm up to here.  
