--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <img src="Running_with_Scissors_(Weird_Al_Yankovic_album_-_cover_art).jpg" alt="">
-    <h1>Albuquerque Ipsum</h1>
-    <h5>Your source for completely unhinged filler text</h5>
+    <h1 class="noMarginBottom">Albuquerque Ipsum</h1>
+    <h5 class="noMarginTop">Your source for completely unhinged filler text</h5>
     <a href="about.html">What is this thing I'm looking at?</a>
     <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
     <span title="I'd go with between 100 and 5,000,000 - but you live your life.">About how many words do you need?*</span>
