fixed asterisk on main page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <h1 class="noMarginBottom">Albuquerque Ipsum</h1>
     <h5 class="noMarginTop">Your source for completely unhinged filler text</h5>
     <a href="about.html">What is this thing I'm looking at?</a>
-    <p>Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.</p>
-    <span title="I'd go with between 100 and 5,000,000 - but you live your life.">About how many words do you need?*</span>
+    <p>
+        Have you ever noticed that Lorem Ipsum sites just don't have enough Weird Al lyrics?  I did too.  So I made this thing here.
+    </p>
+    <span>
+        About how many words do you need?
+        <span id="asterisk" title="I'd go with between 100 and 5,000,000 - but you live your life.">
+            ∗
+        </span>
+    </span>
     <input id="numOfWords" type="number" value="500">
     <button id="submit" onclick="albuquerqize()">Generate</button>
     <p id="heresYerTxt">Here's yer text</p>
