--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Albuquerque Ipsum</title>
-    <link rel="stylesheet" href="blue.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="6.png">
 </head>
 <body>
