changed 'about' page text

--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
         Many people have tried to make more interesting versions of this, my favorite being <a href="https://slipsum.com/?source=post_page-----fa9edd3e456a--------------------------------" target="_blank">this one</a> (give it a few seconds to load), but they all crucially lack Weird Al lyrics.  So that's what I'm up to here.  
     </p>
     <p>
-        I wanted entire lines of text from "Albuquerque", so when you put in how many words you want, you may get a few more than you asked for, just to complete the line.  
+        This site will take arbitrarily selected lines from Weird Al's song "Albuquerque", until the number of words required is met.  
+        Entire lines of text are funnier in general, so when you put in how many words you want, you may get a few more than you asked for, just to complete the line.  
     </p>
     <p>
         Credit for lyrics is, of course, to the legendary <a href="https://www.weirdal.com/" target="_blank">"Weird Al" Yankovic.  </a> 
